--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             .logo-cybernet {
                 width: 140px;
             }
+
+            .saas1.header .header-sub-text {
+                margin-bottom: 20px !important;
+            }
         }
 
         @media (min-width: 765px) {
