--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             .logo-cybernet {
                 width: 140px;
             }
+
+            .header.saas1 .bg {
+                height: 530px !important;
+            }
         }
 
         @media (min-width: 765px) {
