--- a/index.html
+++ b/index.html
@@ -167,9 +167,6 @@
                                 </div>
                                 <div class="link-horizontal">
                                     <ul>
-                                        <!-- <li>
-                                            <a class="btn btn-default primary-btn transparent">watch demo<img alt="video-icon" class="m-l-5" src="assets/images/saas1/video-icon.png"></a>
-                                        </li> -->
                                         <li>
                                             <a href="https://wa.me/6282231316699" class="btn btn-default primary-btn transparent">Daftar Sekarang</a>
                                         </li>
@@ -184,18 +181,6 @@
                                 <img src="assets/images/saas1/homepage.png" alt="image homepage" width="100%">
                             </div>
                         </div>
-                        <!-- <div>
-                        <div class="center-text slider-banner">
-                            <div class="owl-carousel owl-theme overflow-hidden slider-1">
-                                <div class="item">
-                                    <img alt="slid-banner" src="assets/images/saas1/slider-laptop2.png">
-                                </div>
-                                <div class="item">
-                                    <img alt="slid-banner" src="assets/images/saas1/slider-laptop2.png">
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                     </div>
                 </div>
             </div>
@@ -255,7 +240,7 @@
                             </div>
                             <hr>
                             <div class="sub-title">
-                                <p class="p-padding">We believe we have created the most efficient SaaS landing page for your users. Landing page with features that will convince you to use it for your SaaS business.</p>
+                                <p class="p-padding">Kami mempunyai beberapa layanan</p>
                             </div>
                         </div>
                     </div>
