--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <link href="assets/css/magnific-popup.css" rel="stylesheet">
 
     <style>
+        .img-faq {
+            max-width: 60% !important;
+            height: auto;
+        }
+
         header.saas1 nav ul li>a:hover {
             color: #357fef !important;
         }
@@ -72,8 +77,8 @@
                 width: 140px;
             }
 
-            .saas1.header .header-sub-text {
-                margin-bottom: 20px !important;
+            .header.saas1 .bg {
+                height: 530px !important;
             }
         }
 
@@ -167,9 +172,6 @@
                                 </div>
                                 <div class="link-horizontal">
                                     <ul>
-                                        <!-- <li>
-                                            <a class="btn btn-default primary-btn transparent">watch demo<img alt="video-icon" class="m-l-5" src="assets/images/saas1/video-icon.png"></a>
-                                        </li> -->
                                         <li>
                                             <a href="https://wa.me/6282231316699" class="btn btn-default primary-btn transparent">Daftar Sekarang</a>
                                         </li>
@@ -184,18 +186,6 @@
                                 <img src="assets/images/saas1/homepage.png" alt="image homepage" width="100%">
                             </div>
                         </div>
-                        <!-- <div>
-                        <div class="center-text slider-banner">
-                            <div class="owl-carousel owl-theme overflow-hidden slider-1">
-                                <div class="item">
-                                    <img alt="slid-banner" src="assets/images/saas1/slider-laptop2.png">
-                                </div>
-                                <div class="item">
-                                    <img alt="slid-banner" src="assets/images/saas1/slider-laptop2.png">
-                                </div>
-                            </div>
-                        </div>
-                    </div> -->
                     </div>
                 </div>
             </div>
@@ -255,7 +245,7 @@
                             </div>
                             <hr>
                             <div class="sub-title">
-                                <p class="p-padding">We believe we have created the most efficient SaaS landing page for your users. Landing page with features that will convince you to use it for your SaaS business.</p>
+                                <p class="p-padding">Kami mempunyai beberapa layanan</p>
                             </div>
                         </div>
                     </div>
@@ -626,68 +616,6 @@
     </section>
     <!-- /Daftar Harga -->
 
-    <!-- FAQ -->
-    <section class="saas1 faq testimonial-bg" id="faq">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-8">
-                    <div class="faq-block">
-                        <div>
-                            <h3 class="frequent-text">Beberapa pertanyaan yang sering di ajukan (FAQ)</h3>
-                            <div class="accordion faq" id="accordionExample">
-                                <div class="card">
-                                    <div aria-expanded="false" class="card-header collapsed" data-target="#collapse1" data-toggle="collapse" role="heading">
-                                        <a>
-                                            <div class="fa fa-angle-right rotate"></div>
-                                        </a>
-                                        Kapan pembayaran dilakukan?
-                                    </div>
-                                    <div class="collapse show" data-parent="#accordionExample" id="collapse1">
-                                        <div class="card-body">
-                                            Pembayaran dilakukan saat wifi sudah ON
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div aria-expanded="false" class="card-header collapsed" data-target="#collapse2" data-toggle="collapse" role="heading">
-                                        <a>
-                                            <div class="fa fa-angle-right rotate"></div>
-                                        </a>
-                                        Bagaimana sistem pembayarannya?
-                                    </div>
-                                    <div class="collapse" data-parent="#accordionExample" id="collapse2">
-                                        <div class="card-body">
-                                            Sistem pembayarannya adalah pakai dulu baru bayar
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="card">
-                                    <div aria-expanded="false" class="card-header collapsed" data-target="#collapse3" data-toggle="collapse" role="heading">
-                                        <a>
-                                            <div class="fa fa-angle-right rotate"></div>
-                                        </a>
-                                        Berapa sih harganya?
-                                    </div>
-                                    <div class="collapse" data-parent="#accordionExample" id="collapse3">
-                                        <div class="card-body">
-                                            Harga mulai 200ribu disesuaikan dengan lokasi
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="faq-img-block">
-                        <img alt="faq-person" class="img-fluid" src="assets/images/saas1/faq-img.png">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- /FAQ -->
-
     <!-- Testimonial -->
     <section class="saas1 testimonial videos testimonial-bg">
         <div class="container">
@@ -779,6 +707,68 @@
         </div>
     </section>
     <!-- /Testimonial  -->
+
+    <!-- FAQ -->
+    <section class="saas1 faq testimonial-bg" id="faq">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="faq-block">
+                        <div>
+                            <h3 class="frequent-text">Beberapa pertanyaan yang sering di ajukan (FAQ)</h3>
+                            <div class="accordion faq" id="accordionExample">
+                                <div class="card">
+                                    <div aria-expanded="false" class="card-header collapsed" data-target="#collapse1" data-toggle="collapse" role="heading">
+                                        <a>
+                                            <div class="fa fa-angle-right rotate"></div>
+                                        </a>
+                                        Kapan pembayaran dilakukan?
+                                    </div>
+                                    <div class="collapse show" data-parent="#accordionExample" id="collapse1">
+                                        <div class="card-body">
+                                            Pembayaran dilakukan saat wifi sudah ON
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div aria-expanded="false" class="card-header collapsed" data-target="#collapse2" data-toggle="collapse" role="heading">
+                                        <a>
+                                            <div class="fa fa-angle-right rotate"></div>
+                                        </a>
+                                        Bagaimana sistem pembayarannya?
+                                    </div>
+                                    <div class="collapse" data-parent="#accordionExample" id="collapse2">
+                                        <div class="card-body">
+                                            Sistem pembayarannya adalah pakai dulu baru bayar
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card">
+                                    <div aria-expanded="false" class="card-header collapsed" data-target="#collapse3" data-toggle="collapse" role="heading">
+                                        <a>
+                                            <div class="fa fa-angle-right rotate"></div>
+                                        </a>
+                                        Berapa sih harganya?
+                                    </div>
+                                    <div class="collapse" data-parent="#accordionExample" id="collapse3">
+                                        <div class="card-body">
+                                            Harga mulai 200ribu disesuaikan dengan lokasi
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="faq-img-block">
+                        <img alt="faq-person" class="img-faq" src="assets/images/saas1/faq-img.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- /FAQ -->
 
     <!-- Client -->
     <section class="saas1 client brand-slider" id="client-box">
